described userID
