# docs/swagger.json
@@ -103,7 +103,7 @@
                 }
             }
         },
-        "/v1/users/{userId}": {
+        "/v1/users/{userID}": {
             "get": {
                 "description": "Get user by ID",
                 "consumes": [
@@ -116,6 +116,15 @@
                     "user"
                 ],
                 "summary": "Get user by ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "User ID",
+                        "name": "userID",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -168,6 +177,13 @@
                 ],
                 "summary": "Updates user",
                 "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "User ID",
+                        "name": "userID",
+                        "in": "path",
+                        "required": true
+                    },
                     {
                         "description": "Update user",
                         "name": "user",
